src/objects/Tenstreet_API_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>Stores settings for the Tenstreet API callout</description>
    <fields>
        <fullName>Client_Id__c</fullName>
        <description>Client Id for authentication</description>
        <label>Client_Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Id__c</fullName>
        <description>Company Id for XML header</description>
        <label>Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <description>Company Name for XML header</description>
        <label>Company Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <description>Password for authentication</description>
        <label>Password</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <description>Service name for XML header</description>
        <label>Service</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <description>URL of the API</description>
        <label>URL</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Tenstreet API Settings</label>
</CustomObject>